[package]
name = "pytrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
goblin = "0.7.1"
nix = { version = "0.26.2", features = ["process"] }

[build-dependencies]
bindgen = "0.64.0"